// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GiftCardTileVanilla should render gift card tile 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(Text)>
          <Styled(Styled(BodyCopy))
            accessibilityText=""
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            spacingStyles="margin-bottom-MED"
            text="lbl_giftcard_endingIn  "
            textDecoration={null}
          />
        </Styled(Text)>
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          data-locator=""
          disableButton={true}
          fill="DARK"
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          paddings="12px 32px 12px 32px"
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="lbl_giftcard_applyBtn"
          theme={Object {}}
          type="submit"
          url=""
          withNoLineHeight={false}
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;

exports[`GiftCardTileVanilla should render gift card tile with 0 order balance 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(Text)>
          <Styled(Styled(BodyCopy))
            accessibilityText=""
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            spacingStyles="margin-bottom-MED"
            text="lbl_giftcard_endingIn  "
            textDecoration={null}
          />
        </Styled(Text)>
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          data-locator=""
          disableButton={true}
          fill="DARK"
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          paddings="12px 32px 12px 32px"
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="lbl_giftcard_applyBtn"
          theme={Object {}}
          type="submit"
          url=""
          withNoLineHeight={false}
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;

exports[`GiftCardTileVanilla should render gift card tile with 100 order balance 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(Text)>
          <Styled(Styled(BodyCopy))
            accessibilityText=""
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            spacingStyles="margin-bottom-MED"
            text="lbl_giftcard_endingIn  "
            textDecoration={null}
          />
        </Styled(Text)>
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          data-locator=""
          disableButton={false}
          fill="DARK"
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          paddings="12px 32px 12px 32px"
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="lbl_giftcard_applyBtn"
          theme={Object {}}
          type="submit"
          url=""
          withNoLineHeight={false}
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;

exports[`GiftCardTileVanilla should render gift card tile with errors 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(Text)>
          <Styled(Styled(BodyCopy))
            accessibilityText=""
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            spacingStyles="margin-bottom-MED"
            text="lbl_giftcard_endingIn  "
            textDecoration={null}
          />
        </Styled(Text)>
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          data-locator=""
          disableButton={true}
          fill="DARK"
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          paddings="12px 32px 12px 32px"
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="lbl_giftcard_applyBtn"
          theme={Object {}}
          type="submit"
          url=""
          withNoLineHeight={false}
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;

exports[`GiftCardTileVanilla should render gift card tile with isGiftCardApplied 1`] = `
<Fragment>
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(Text)>
          <Styled(Styled(BodyCopy))
            accessibilityText=""
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs16"
            fontWeight="regular"
            margin={null}
            numberOfLines={null}
            spacingStyles="margin-bottom-MED"
            text="lbl_giftcard_endingIn undefined  | lbl_giftcard_remainingBal: $0.25"
            textDecoration={null}
          />
        </Styled(Text)>
      </Styled(View)>
      <Styled(View)>
        <Styled(CustomButton)
          active={false}
          buttonVariation="fixed-width"
          color=""
          customStyle={Object {}}
          customTextStyle={null}
          data-locator=""
          disableButton={false}
          fill=""
          fullWidth=""
          iconColor="gray.800"
          iconName="chevron-down"
          iconSize="fs12"
          locator=""
          navigation={Object {}}
          onPress={[Function]}
          paddings="12px 32px 12px 32px"
          selected={false}
          selectedIcon="chevron-up"
          showIcon={false}
          text="lbl_giftcard_removeBtn"
          theme={Object {}}
          type="submit"
          url=""
          withNoLineHeight={false}
        />
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Fragment>
`;
